Project

General

Profile

Actions

Bug #46263

closed

S3 API DELETE /{bucket}?encryption or DELETE /{bucket}?replication remove bucket

Added by Valery Tschopp almost 4 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
rgw s3 backport_processed
Backport:
nautilus, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When calling the S3 API DeleteBucketReplication [1] or DeleteBucketEncryption [2] on a bucket, the rgw delete the bucket.

Terraform will call those S3 API to apply a simple S3 bucket plan. But the rgw doesn't simply ignore the unsupported operations, it really delete the bucket.

To reproduce:

1. create an empty bucket

PUT /{bucket} HTTP/1.1
Host: cname.domain.com

2.1 try to delete the bucket encryption

DELETE /{bucket}?encryption HTTP/1.1
Host: cname.domain.com

2.2 try to delete the bucket replication

DELETE /{bucket}?replication HTTP/1.1
Host: cname.domain.com

3. in both case 2.1 or 2.2 the bucket will be effectively deleted

[1] https://docs.aws.amazon.com/AmazonS3/latest/API/API_DeleteBucketReplication.html
[2] https://docs.aws.amazon.com/AmazonS3/latest/API/API_DeleteBucketEncryption.html


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #46997: nautilus: S3 API DELETE /{bucket}?encryption or DELETE /{bucket}?replication remove bucketRejectedNathan CutlerActions
Copied to rgw - Backport #46998: octopus: S3 API DELETE /{bucket}?encryption or DELETE /{bucket}?replication remove bucketResolvedNathan CutlerActions
Actions #1

Updated by Abhishek Lekshmanan almost 4 years ago

  • Status changed from New to In Progress
  • Assignee set to Abhishek Lekshmanan
Actions #2

Updated by Abhishek Lekshmanan over 3 years ago

Bucket replication is not implemented in Nautilus, so the backport needs to add an additional argument

Actions #3

Updated by Abhishek Lekshmanan over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 36264
Actions #4

Updated by J. Eric Ivancich over 3 years ago

  • Status changed from Fix Under Review to Resolved

Hey Abhi -- I don't see any backports, so I marked as resolved. Please update tracker if backports necessary.

Actions #5

Updated by Nathan Cutler over 3 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to nautilus, octopus
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #46997: nautilus: S3 API DELETE /{bucket}?encryption or DELETE /{bucket}?replication remove bucket added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #46998: octopus: S3 API DELETE /{bucket}?encryption or DELETE /{bucket}?replication remove bucket added
Actions #8

Updated by Backport Bot over 1 year ago

  • Tags changed from rgw s3 to rgw s3 backport_processed
Actions #9

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF